--- a/settings.json
+++ b/settings.json
@@ -1,19 +1,19 @@
 {
-  "multiplePoses":true,
-  "useTestImage":false,
-  "audioHack":true,
-  "host":"localhost",
-  "port":"9527",
-  "format":"ARR",
-  "poseNetConig":{
+  "multiplePoses": true,
+  "useTestImage": false,
+  "audioHack": true,
+  "host": "localhost",
+  "port": "9527",
+  "format": "JSON",
+  "poseNetConig": {
     "architecture": "MobileNetV1",
     "outputStride": 16,
     "inputResolution": 257,
     "multiplier": 0.75
   },
-  "cameraConfig":{
-    "deviceId":null,
+  "cameraConfig": {
+    "deviceId": null,
     "width": null,
-    "height":null
+    "height": null
   }
 }
